# sqla-wrapper

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS  AUTHORS.md  BUILD  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  MIT-LICENSE  Makefile  README.md  README.rst  __init__.py  index.html  mm.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: docs.yml  run_tests.yml
alembic-cli-integrations/: index.html
alembic-wrapper/: index.html
api/: index.html
assets/css/: common.css
docs/: Makefile  about.rst  api.rst  conf.py  connection-uri.rst.inc  contents.rst.inc  deploy.sh  index.rst  mkdocs.yml  models.rst  pagination.rst  queries.rst  quickstart.rst  requirements.txt  testing.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  models.doctree  pagination.doctree  queries.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  models.html  objects.inv  pagination.html  queries.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
docs/_build/html/_static/: opensearch.xml
docs/_themes/: LICENSE  Makefile  README.rst  babel.cfg
docs/_themes/_locale/: lucuma.pot
docs/_themes/_locale/en/LC_MESSAGES/: lucuma.po  sphinx.mo  sphinx.po
docs/_themes/_locale/es/LC_MESSAGES/: lucuma.mo  lucuma.po  sphinx.mo  sphinx.po
docs/_themes/lucuma/: assets.py  footer.html  genindex.html  header.html  layout.html  page.html  requirements.txt  search-form.html  search.html  searchresults.html  toc.html
docs/_themes/lucuma/static/: translations.js_t
docs/_themes/lucuma/static/scripts/: scripts.min.js
docs/_themes/lucuma/static/styles/: main.css  responsive.css  styles.min.css  type.css
docs/docs/: alembic-cli-integrations.md  alembic-cli.md  alembic-wrapper.md  api.md  how-to.md  index.md  model-helpers.md  robots.txt  sa-shortcut-module.md  sa.md  sqla-model-helpers.md  sqla.md  sqlalchemy-wrapper.md  testing-with-a-real-database.md  the-session.md  working-with-the-session.md
docs/docs/api/: alembic-wrapper-class.md  session-class.md  sqlalchemy-wrapper-class.md  testtransaction-class.md
docs/docs/assets/css/: common.css
docs/en/: Makefile  about.rst  api.rst  conf.py  connection-uri.rst.inc  contents.rst.inc  index.rst  pagination.rst  quickstart.rst
docs/es/: Makefile  about.rst  api.rst  conf.py  contents.rst.inc  index.rst  models.rst  pagination.rst  queries.rst  quickstart.rst
docs/old/5.x/: 404.html  index.html
docs/old/5.x/alembic-wrapper/: index.html
docs/old/5.x/api/: index.html
docs/old/5.x/assets/css/: common.css
docs/old/5.x/how-to/: index.html
docs/old/5.x/search/: search_index.json
docs/old/5.x/sqlalchemy-wrapper/: index.html
docs/old/5.x/testing-with-a-real-database/: index.html
docs/old/5.x/working-with-the-session/: index.html
docs/overrides/: home.html  main.html
docs/overrides/partials/: header.html
how-to/: index.html
orm/: __init__.py  _compat.py  helpers.py  main.py  paginator.py
search/: search_index.json
sqla_wrapper/: __init__.py  active_record_mixin.py  alembic_wrapper.py  base_model.py  base_model_class.py  base_query.py  core.py  default_meta.py  default_model.py  main.py  model.py  paginator.py  representable.py  routing.py  sa.py  session.py  session_class.py  session_proxy.py  sqlalchemy_wrapper.py  tablename_mixin.py  ttransaction.py  version.py
sqla_wrapper/cli/: click_cli.py  proper_cli_cli.py  pyceo_cli.py
sqlalchemy-wrapper/: index.html
sqlalchemy_wrapper/: BUILD  __init__.py  _compat.py  helpers.py  main.py  paginator.py
src/sqla_wrapper/: __init__.py  alembic_wrapper.py  base_model.py  session.py  sqlalchemy_wrapper.py
src/sqla_wrapper/cli/: click_cli.py
testing-with-a-real-database/: index.html
tests/: conftest.py  test_active_record.py  test_alembic_wrapper.py  test_auto_tablename.py  test_base_model.py  test_core.py  test_helpers.py  test_main.py  test_pagination.py  test_paginator.py  test_representable.py  test_session.py  test_session_class.py  test_sqlalchemy_wrapper.py  test_testing.py  test_wrapper.py
tests/test_for_sqlalchemy_wrapper/: BUILD  test_wrapper.py
tests/test_for_sqlalchemy_wrapper/.svn/: all-wcprops  entries
working-with-the-session/: index.html
