[metadata]
name = sqla-wrapper
version= 5.0.0.dev1
url = https://github.com/jpsca/sqla-wrapper
project_urls =
    Issue tracker = https://github.com/jpsca/sqla-wrapper/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
license = MIT
license_file = MIT-LICENSE
description = A framework-independent modern wrapper for SQLAlchemy 2 & Alembic.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.7,<4.0
install_requires =
    sqlalchemy >= 1.4

[options.packages.find]
exclude =
    tests

[options.extras_require]
alembic =
    alembic >= 1.6

test =
    flake8
    psycopg2-binary
    pytest
    pytest-cov

dev =
    mypy

[flake8]
application-package-names = sqla_wrapper
application-import-names = sqla_wrapper
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'
    E501,
    F405,  # F405 x defined from star imports

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,

[tool:pytest]
addopts = --doctest-modules

[mypy]
plugins = sqlalchemy.ext.mypy.plugin
