[metadata]
name = sqla-wrapper
version= 5.1
url = https://github.com/jpsca/sqla-wrapper
project_urls =
    Documentation = https://jpsca.github.io/sqla-wrapper/
    Issue tracker = https://github.com/jpsca/sqla-wrapper/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Database
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_files = MIT-LICENSE
description = A framework-independent modern wrapper for SQLAlchemy & Alembic.
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >=3.7,<4.0
install_requires =
    sqlalchemy >= 1.4
    alembic >= 1.6

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8
    flake8-bugbear
    flake8-import-order
    flake8-logging-format
    flake8-quotes
    psycopg2-binary
    pytest
    pytest-cov
    flask
    click
    pyceo >=4.0

dev =
    mypy
    pre-commit
    sqlalchemy[mypy]
    tox

[flake8]
application-package-names = sqla_wrapper
application-import-names = sqla_wrapper
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    C901,  # x is too complex
    E203,  # whitespace before ':'
    E501,
    F405,  # x defined from star imports
    W503,  # line break before binary operator
    W605,

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,


[tool:pytest]
addopts = --doctest-modules


[mypy]
plugins = sqlalchemy.ext.mypy.plugin
